<resources>
    <string name="app_name">Cookie Tinder</string>
    <string name="cookie">Cookie</string>
    <string name="Name">Name</string>
    <string name="Story">story</string>
    <string name="Like">like</string>
    <string name="Dislike">Dislike</string>
    <string name="title_activity_main">Cookie Tinder</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="settings">Settings</string>
    <string name="options">Options</string>
    <string name="info">Info</string>
</resources>